syntax = "proto3";

package netmsg;

message NetMsg {
    uint32 action = 1;
    bytes payload = 2;
}
